# EyeLike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _rebuild.bat  build.bat  clean.bat
include/: precompiled.h
lib/: mybase_d.exp  mycv_d.exp  mygui_d.exp
src/: main.cpp
tools/cmake/: CMakeLists.txt
